RESOLVED FIXED63962
Fix MIPS build due to readInt32 and readPointer
https://bugs.webkit.org/show_bug.cgi?id=63962
Summary Fix MIPS build due to readInt32 and readPointer
Chao-ying Fu
Reported 2011-07-05 17:48:45 PDT
Hi, I will post a patch to fix readInt32 and readPointer for the MIPS build. Thanks! Regards, Chao-ying
Attachments
Fix MIPS readInt32 and readPointer (1.41 KB, patch)
2011-07-05 17:54 PDT, Chao-ying Fu
no flags
Add MIPS rshift32 (2.12 KB, patch)
2011-07-07 15:25 PDT, Chao-ying Fu
no flags
Chao-ying Fu
Comment 1 2011-07-05 17:54:39 PDT
Created attachment 99768 [details] Fix MIPS readInt32 and readPointer Here is the patch. JavaScriptCore tests are ok. Thanks!
Chao-ying Fu
Comment 2 2011-07-07 15:25:16 PDT
Created attachment 100038 [details] Add MIPS rshift32 One more fix to add MIPS rshift32. Thanks!
Patrick R. Gansterer
Comment 3 2011-07-09 13:07:18 PDT
Patrick R. Gansterer
Comment 4 2011-07-09 13:09:33 PDT
Comment on attachment 100038 [details] Add MIPS rshift32 Some hints for the future: Adding a revision where the build break occured helps to verify the patch and to see the relations between changes. Any interests in setting up a buildbot for MIPS?
Note You need to log in before you can comment on or make changes to this bug.