Fix MIPS build due to readInt32 and readPointer https://bugs.webkit.org/show_bug.cgi?id=63962

Patch by Chao-ying Fu <fu@mips.com> on 2011-07-09

* assembler/MIPSAssembler.h:
(JSC::MIPSAssembler::readInt32):
(JSC::MIPSAssembler::readPointer):
* assembler/MacroAssemblerMIPS.h:
(JSC::MacroAssemblerMIPS::rshift32):

Canonical link: https://commits.webkit.org/79952@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90687 268f45cc-cd09-0410-ab3c-d52691b4dbfc